srcs/grafana.yaml
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    grafana.yaml                                       :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: oel-bour <oel-bour@student.42.fr>          +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2020/02/25 16:25:52 by oel-bour          #+#    #+#              #
#    Updated: 2020/02/26 18:18:22 by oel-bour         ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

apiVersion: v1
kind: Service
metadata:
  labels:
    name: grafana
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 3000
  selector:
    app: grafana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      restartPolicy: Always
      containers:
      - name: grafana
        image: grafana_alpine
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-pvc-storage
          mountPath: /var/lib/grafana/
      volumes:
        - name: grafana-pvc-storage
          persistentVolumeClaim:
              claimName: grafana-pvc
